--- a/com.chriseliot.geo/pom.xml
+++ b/com.chriseliot.geo/pom.xml
@@ -8,6 +8,7 @@
 	<name>Geo</name>
 	<description>Geometry analysis</description>
 	<packaging>jar</packaging>
+	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.target>1.8</maven.compiler.target>
@@ -15,7 +16,10 @@
 		<log4j.version>2.13.0</log4j.version>
 		<junit.version>4.11</junit.version>
 		<junit.jupiter.version>5.4.0</junit.jupiter.version>
+		<matheclipse.version>2.0.0-SNAPSHOT</matheclipse.version>
+		<opencsv.version>4.1</opencsv.version>
 	</properties>
+	
 	<dependencies>
 
 		<dependency>
@@ -49,19 +53,27 @@
 		<dependency>
 			<groupId>org.matheclipse</groupId>
 			<artifactId>matheclipse-core</artifactId>
-			<version>2.0.0-SNAPSHOT</version>
+			<version>${matheclipse.version}</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.matheclipse</groupId>
 			<artifactId>matheclipse-gpl</artifactId>
-			<version>2.0.0-SNAPSHOT</version>
+			<version>${matheclipse.version}</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.matheclipse</groupId>
 			<artifactId>matheclipse-io</artifactId>
-			<version>2.0.0-SNAPSHOT</version>
+			<version>${matheclipse.version}</version>
 		</dependency>
-
+		
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>${opencsv.version}</version>
+		</dependency>
+		
 	</dependencies>
 
 	<repositories>
