--- a/com.chriseliot.geo/pom.xml
+++ b/com.chriseliot.geo/pom.xml
@@ -15,7 +15,8 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<log4j.version>2.13.0</log4j.version>
 		<junit.version>4.11</junit.version>
-		<junit.jupiter.version>5.4.0</junit.jupiter.version>
+		<junit.jupiter.version>5.7.2</junit.jupiter.version>
+		<junit.platform.version>1.7.2</junit.platform.version>
 		<matheclipse.version>2.0.0-SNAPSHOT</matheclipse.version>
 		<opencsv.version>4.1</opencsv.version>
 	</properties>
@@ -50,6 +51,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<!-- junit 5 -->
+			<groupId>org.junit.platform</groupId>
+			<artifactId>junit-platform-reporting</artifactId>
+			<version>${junit.platform.version}</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-params</artifactId>
